Media queries added to display text information correctly on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,11 +193,81 @@ button:hover {
   }
 
 /* Media queries */
-@media screen and (min-width: 769px) {
+
+@media screen and (max-width: 480px) {
+  .container {
+    margin: 0.5rem;
+  }
+  .quiz-name {
+    font-size: 6rem;
+  }
+
+  /*
   .main-container {
-    height: 100vh;
+    display: flex;
+    }
+  */
+  h1 {
+    font-size: 4.5rem;
+    padding: 0.5rem;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+    padding: 0.5rem;
+  }
+
+  ul li {
+    font-size: 1.6rem;
+    margin: 0.3rem;
+  }
+
+  #quiz-rules li:last-child {
+    font-size: 1.8rem;
+    padding: 1rem
+  }
+
+  #question {
+    font-size: 2rem;
+  }
+
+  button,
+  #submit-button {
+    padding: 1rem;
+    font-size: 2rem;
+    margin: 0.5rem;
+  }
+
+  #question-number h1 {
+    font-size: 3.5rem;
+  }
+
+  #score-area {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-size: 1.6rem;
+  }
+
+  #options li {
+    margin: 1rem 0.5rem;
+  }
+
+  img {
+    transform: scale(0.8);
+  }
+
+  #arduino-information {
+    font-size: 1.6rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .scores {
+    padding: 0.3rem;
   }
 }
+
 
 @media screen and (max-width: 768px) {
   .container {
@@ -206,4 +276,10 @@ button:hover {
   /*.main-container {
     height: 100vh;
   }*/
+}
+
+@media screen and (min-width: 769px) {
+  .main-container {
+    height: 100vh;
+  }
 }
